add 2 recipes and images
added pannacotta and glazed donuts recipe with relative images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/ratatouille.html"></a>
+    <ul>
+        <li><a href="./recipes/ratatouille.html">Ratatouille Recipe</a></li>
+        <li><a href="./recipes/glazed-donut.html">Glazed Donut Recipe</a></li>
+        <li><a href="./recipes/panna-cotta.html">Panna Cotta Recipe</a></li>
+    </ul>
+    
 </body>
 </html>
