--- a/recipes/ratatouille.html
+++ b/recipes/ratatouille.html
@@ -8,5 +8,42 @@
 </head>
 <body>
     <h1>Ratatouille Recipe</h1>
+
+    <img src="../images/ratatouille.png" alt="ratatouille pic">
+
+    <h2>Dish Description</h2>
+
+    <br>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed risus ultricies tristique nulla. Vitae purus faucibus ornare suspendisse sed nisi lacus sed. Ut etiam sit amet nisl. Semper viverra nam libero justo laoreet.</p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>20g cipollotto rosso</li>
+        <li>500ml di passata di pomodoro</li>
+        <li>30ml di olio extra vergine di oliva (1/2 cucchiaio)</li>
+        <li>1 dado vegetale MAGGI</li>
+        <li>600g di zucchine gialle</li>
+        <li>600g di zucchine verdi</li>
+        <li>800g di pomodori ramati</li>
+        <li>400g di melanzane</li>
+        <li>1 cucchiaio di olio extra vergine di oliva (10g)</li>
+        <li>2 rametti di rosmarin fresco</li>
+        <li>2 rametti di origano fresco</li>
+
+    </ul>
+
+    <h2>Preparation</h2>
+
+    <ol>
+        <li>Preheat the oven for 375˚F (190˚C).</li>
+        <li>Slice the eggplant, tomatoes, squash, and zucchini into approximately ¹⁄₁₆-inch (1-mm) rounds, then set aside.</li>
+        <li>Make the sauce: Heat the olive oil in a 12-inch (30-cm) oven-safe pan over medium-high heat. Sauté the onion, garlic, and bell peppers until soft, about 10 minutes. Season with salt and pepper, then add the crushed tomatoes. Stir until the ingredients are fully incorporated. Remove from heat, then add the basil. Stir once more, then smooth the surface of the sauce with a spatula.</li>
+        <li>Arrange the sliced veggies in alternating patterns, (for example, eggplant, tomato, squash, zucchini) on top of the sauce from the outer edge to the middle of the pan. Season with salt and pepper.</li>
+        <li>Make the herb seasoning: In a small bowl, mix together the basil, garlic, parsley, thyme, salt, pepper, and olive oil. Spoon the herb seasoning over the vegetables.</li>
+        <li>Cover the pan with foil and bake for 40 minutes. Uncover, then bake for another 20 minutes, until the vegetables are softened.</li>
+        <li>Serve while hot as a main dish or side. The ratatouille is also excellent the next day--cover with foil and reheat in a 350˚F (180˚C) oven for 15 minutes, or simply microwave to desired temperature.</li>
+    </ol>
 </body>
 </html>
